IntelliJ IDEA inspection warning fixes.